--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -4,6 +4,6 @@
 }
 
 .h1 {
-  margin-top: 10px !important
-  margin-bottom: 20px !important
+  margin-top: 10px !important;
+  margin-bottom: 20px !important;
 }
